# adventofcode-2021

./: Cargo.toml
src/: util.rs
src/day1/: a.rs  b.rs
src/day2/: a.rs  b.rs
src/day3/: a.rs  b.rs
src/day4/: a.rs  b.rs
src/day5/: a.rs  b.rs
src/day6/: a.rs  b.rs
src/day7/: a.rs  b.rs
src/day8/: a.rs  b.rs
src/day9/: a.rs  b.rs
