[package]
name = "adventofcode-2021"
version = "0.1.0"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "day1_a"
path = "src/day1/a.rs"

[[bin]]
name = "day1_b"
path = "src/day1/b.rs"

[[bin]]
name = "day2_a"
path = "src/day2/a.rs"

[[bin]]
name = "day2_b"
path = "src/day2/b.rs"

[[bin]]
name = "day3_a"
path = "src/day3/a.rs"

[[bin]]
name = "day3_b"
path = "src/day3/b.rs"

[[bin]]
name = "day4_a"
path = "src/day4/a.rs"

[[bin]]
name = "day4_b"
path = "src/day4/b.rs"

[[bin]]
name = "day5_a"
path = "src/day5/a.rs"

[[bin]]
name = "day5_b"
path = "src/day5/b.rs"

[[bin]]
name = "day6_a"
path = "src/day6/a.rs"

[[bin]]
name = "day6_b"
path = "src/day6/b.rs"

[[bin]]
name = "day7_a"
path = "src/day7/a.rs"

[[bin]]
name = "day7_b"
path = "src/day7/b.rs"
